# matryoshka_transcoder

./: .gitignore  ANTI_DUPLICATION_IMPLEMENTATION_SUMMARY.md  COLAB_NOTEBOOK_INSTRUCTIONS.md  COLAB_TRAINING.md  EVALUATE_LAYER8_GUIDE.md  FEATURE_DUPLICATION_ANALYSIS_SUMMARY.md  GEMMA_LAYER8_TRAINING_SUMMARY.md  INTERPRETABILITY_BRANCH_README.md  Matryoshka_Transcoder_Training.ipynb  Matryoshka_Transcoder_Training_Token.ipynb  NESTED_GROUPS_SUMMARY.md  QUICK_START_COLAB.md  QUICK_START_EVALUATION.md  README.md  README_NESTED_GROUPS.md  SUMMARY.md  TRAINING_AND_ANALYSIS_SUMMARY.md  TRAINING_ERROR_ANALYSIS.md  TRAINING_STATUS_UPDATE.md  UPDATED_EVALUATION_GUIDE.md  cleanup_layer8.py  colab_train.py  demo_analysis_pipeline.py  evaluate_latest_layer17.py  gpu_daemon.sh  gpu_monitor.sh  gpu_usage.sh  main.py  monitor_anti_duplication_training.py  pyproject.toml  quick_nested_groups_reference.txt  quick_training_test.py  run_full_absorption_layer12.py  run_full_absorption_layer8.py  run_lr_experiments.sh  sae.py  show_all_features.py  standalone_output.txt  test_absorption_simple.py  test_absorption_standalone.py  (+9 more)
.cursor/plans/: sa-01cc9464.plan.md
analysis/: analysis_plan_layer17.md  analyze_feature_similarity.py  analyze_feature_weights.py  analyze_layer17_results.py  analyze_model_weights.py  generate_top10_activation_samples_latest.py  plot_compare_transcoders.py  show_activation_examples.py  top_activation_features.py
analysis/layer17_results/: layer17_analysis_report.md
analysis_results/gemma-2-2b_blocks.8.hook_resid_pre_4608_matryoshka-transcoder_8_0.0003_activation_samples/: analysis_results.json  collection_summary.json  feature_00015_samples.json  feature_00062_samples.json  feature_00071_samples.json  feature_00165_samples.json  feature_00198_samples.json  feature_00218_samples.json  feature_00276_samples.json  feature_00333_samples.json  feature_00353_samples.json  feature_00384_samples.json  feature_00402_samples.json  feature_00461_samples.json  feature_00533_samples.json  feature_00554_samples.json  feature_00558_samples.json  feature_00595_samples.json  feature_00650_samples.json  feature_00661_samples.json  feature_00751_samples.json  feature_00757_samples.json  feature_00777_samples.json  feature_00811_samples.json  feature_00830_samples.json  feature_00838_samples.json  feature_01044_samples.json  feature_01078_samples.json  feature_01149_samples.json  feature_01201_samples.json  feature_01207_samples.json  feature_01314_samples.json  feature_01316_samples.json  feature_01321_samples.json  feature_01348_samples.json  feature_01352_samples.json  feature_01377_samples.json  feature_01380_samples.json  feature_01386_samples.json  feature_01403_samples.json  (+63 more)
analysis_results/layer8_evaluation/: metrics.json  summary.txt
analysis_results/saebench_layer8/: saebench_metrics.json
analysis_results/simple_saebench_layer8/: simple_saebench_metrics.json
autointerp_results/comparison_layer8/: google_results.json  matryoshka_results.json
autointerp_results/matryoshka_layer8/: matryoshka_results.json
config/: default.json
configs/saebench/: gemma2b_l17.yaml
demo_results/: demo_interpretability_report.md
docs/: 01_PROJECT_OVERVIEW_AND_STRUCTURE.md  02_TRAINING_AND_CONFIGURATION.md  03_EVALUATION_AND_METRICS.md  04_MATRYOSHKA_TRANSCODER_AND_NESTED_GROUPS.md  05_INTERPRETABILITY_TOOLS_ACTIVATION_SAMPLES.md  ACTIVATION_SAMPLE_COLLECTION.md  EVALUATION_GUIDE.md  FEATURE_EVALUATION_GUIDE.md  FVU_AND_GEMMA_GUIDE.md  GEMMA2_HOOK_CORRECTION.md  GEMMA_GUIDE.md  GPU_MEMORY_GUIDE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ACTIVATION_SAMPLES.md  INTERPRETABILITY_EVALUATION.md  MATRYOSHKA_TRANSCODER.md  MULTI_GPU_GUIDE.md  PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md  REPOSITORY_STATUS_REPORT.md  TRAINING_GUIDE.md  TRANSCODER_QUICKSTART.md  autointerp_free_alternatives.md  nested_groups_explanation.md  saebench_correct_metrics.md  saebench_evaluation_guide.md  saebench_metrics_quick_reference.md
eval/: compare_transcoders.sh
eval/sae_bench/: AUTOINTERP_COMPARISON.md  __init__.py  activation_pipeline.py  run_autointerp.py  run_autointerp_simple.py  wrappers.py
examples/: evaluate_autointerp_huggingface.sh  evaluate_saebench_correct_example.sh  evaluate_saebench_example.sh  interpretability_evaluation_example.py
monitoring/: monitor_longer_training.py  monitor_training_progress.py
scripts/temp/: demo_activation_samples.py  demonstrate_sample_collection.py  inspect_checkpoint_structure.py  train_and_analyze_layer8.py
src/adapters/: gemma_scope_transcoder.py
src/eval/: compare_interpretability.py  compare_saebench_metrics.py  compare_transcoders.py  eval_interpretability_saebench.py  eval_saebench.py  eval_saebench_autointerp_absorption.py  eval_saebench_simple.py  evaluate_interpretability_standalone.py  interpretability_metrics.py  sae_bench_adapters.py
src/models/: activation_store.py  sae.py  transcoder_activation_store.py
src/scripts/: check_gpu.py  compare_transcoders.py  eval_loss_recovered.py  evaluate_features.py  example_activation_sample_collection.py  main.py  run_evaluation.py  run_evaluation_cpu.py  run_evaluation_safe.py  train_all_layers_10k.py  train_gemma_layer12_transcoder.py  train_gemma_layer12_transcoder_decay.py  train_gemma_layer12_transcoder_warmup.py  train_gemma_layer12_transcoder_warmup_decay.py  train_gemma_layer12_with_warmup_decay_samples.py  train_gemma_layer17_5groups_15k_steps.py  train_gemma_layer17_with_warmup_decay_samples.py  train_gemma_layer8_transcoder.py  train_gemma_layer8_transcoder_corrected.py  train_gemma_layer8_with_warmup_decay_samples.py  train_layer12_18k_topk96.py  train_layer17_18k_topk96.py  train_layer5_18k_topk96.py  train_layer8_18k_topk96.py  train_template.py  train_with_anti_duplication.py
src/training/: loss_recovered.py  training.py
src/utils/: activation_samples.py  analyze_activation_samples.py  clean_results.py  cleanup_results.py  config.py  diversity_regularization.py  logs.py  (+4 more)
tests/: test_activation_samples.py  test_end_to_end_sample_collection.py
(+37 files in other folders)
